# BTrack

./: .flow  .gitignore  .hgignore  BTrack.Doxyfile  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml  max-external.yml  python-module.yml
doc/: mainpage.dox
doc/html/: _b_track_8cpp.html  _b_track_8h.html  _b_track_8h_source.html  _circular_buffer_8h.html  _circular_buffer_8h_source.html  _onset_detection_function_8cpp.html  _onset_detection_function_8h.html  _onset_detection_function_8h_source.html  annotated.html  class_b_track-members.html  class_b_track.html  class_circular_buffer-members.html  class_circular_buffer.html  class_onset_detection_function-members.html  class_onset_detection_function.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  index.html  menudata.js
doc/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_62.js  all_64.js  all_67.js  all_69.js  all_6f.js  all_7.js  all_70.js  all_73.js  all_75.js  all_8.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_62.js  classes_6f.js  enums_0.js  enums_6f.js  enums_77.js  files_0.js  files_1.js  files_2.js  files_62.js  files_6f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_62.js  functions_63.js  functions_66.js  functions_69.js  functions_6f.js  (+9 more)
modules-and-plug-ins/max-external/: Info.plist  README.md  btrack~.cpp
modules-and-plug-ins/max-external/btrack~.xcodeproj/: project.pbxproj
modules-and-plug-ins/python-module/: CMakeLists.txt  INSTALL.md  README.md  btrack_python_module.cpp  example.py  pyproject.toml  requirements.txt  setup.py
modules-and-plug-ins/vamp-plugin/: BTrackVamp.cpp  BTrackVamp.h  Makefile
plugins/max-external/: Beat Tracking Example.maxpat  CMakeLists.txt  btrack~.cpp  build-max-external.sh
plugins/max-external/btrack~/: CMakeLists.txt  README.md  btrack~.cpp  btrack~.maxhelp  build-max-external.sh  maxmspsdk.xcconfig
plugins/max-external/btrack~.xcodeproj/: project.pbxproj
plugins/python-module/: BTrackPythonModule.cpp  CMakeLists.txt  README.md  example.py  pyproject.toml
plugins/python-module/tests/: test_btrack.py  test_data.py
plugins/vamp-plugin/: BTrackVamp.cpp  INSTALL.md  plugins.cpp
python-module/: btrack_python_module.cpp  setup.py
src/: BTrack.cpp  BTrack.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h
tests/: CMakeLists.txt  Test_BTrack.cpp
unit-tests/BTrack Tests/: BTrack_Tests.1  main.cpp
unit-tests/BTrack Tests.xcodeproj/: project.pbxproj
unit-tests/BTrack Tests/tests/: Test_BTrack.cpp
